logs/20250204/155124_execution.log
nohup: ignoring input
Traceback (most recent call last):
  File "/lustre/hpc/icecube/cyan/factory/IceCubeTransformer/TrainingDebuggingYard.py", line 23, in <module>
    from Model.FlavourClassificationTransformerEncoder import FlavourClassificationTransformerEncoder 
  File "/lustre/hpc/icecube/cyan/factory/IceCubeTransformer/Model/FlavourClassificationTransformerEncoder.py", line 8, in <module>
    from Model.EncoderBlock import EncoderBlock
  File "/lustre/hpc/icecube/cyan/factory/IceCubeTransformer/Model/EncoderBlock.py", line 7, in <module>
    from Model.BuildingBlocks.XFormersAttention import XFormersAttention
  File "/lustre/hpc/icecube/cyan/factory/IceCubeTransformer/Model/BuildingBlocks/XFormersAttention.py", line 90
    expanded_mask = expanded_mask.masked_fill(expanded_mask == 0, float("-inf"))inf
                                                                                ^
SyntaxError: invalid syntax
